Sigil 0.5.2 TBA
    - Fix issue 1242: Metadata::FreeFormMetadata missing assignment line 360.
    - Fix issue 1235: Deleting one file does not give a warning dialog.
    - Fix issue 1129: Crash when importing existing image.

Sigil 0.5.1 2012.02.05
    - Issue 1225:
      * Add searching selected files.
      * Add search wrapping.
      * Replace in BV automatically goes to CV.
      * Fixed bug where in CV if you do a replace of a word and then replace
        all when there are the same words on the page, the page view wouldn't
        be refreshed.
      * Various fixes.
    - Add English translation file used for plural strings.
    - Implement issue 986: Automatically renumber playorder in TOC NCX.
    - Implement issue 1224: F&R modifications to update layout and add Regex Multiline.
    - Fix issue 1214: Dictionary files do not include hypen files or GB files.
    - Fix issue 1213: Find and Replace does not save file when F&R is already
      open and searching all HTML files.
    - Remove the ability to use F&R to replace text in BV as it is unfixable in
      its current state.
    - Fix issue 1215: Book View line/column incorrect in status bar.
    - Fix issue 1216: Re-opening a document already in a tab resets the cursor
      position back to the top.
    - Fix issue 1218: F&R cleanup.
    - Fix issue 1212: Remove opf namespace rewriting when opening a file because
      it ended up being more trouble than it was wroth.
    - Fix issue 1188: New Sigil Regex engine crashes when pressing "replace all",
      works fine on pushing "replace" over and over and over again.
    - Implement issue 269: Select more than one item in the Book Browser Column.
    - Implement issues 792: Add Shortcuts for next/previous HTML file with regard
      to reading order, and sync selection in book browser to open tab.
    - Implement issue 1135: New blank section must be automatically selected on book browser.