@@ -1,4 +1,5 @@
 Sigil 0.5.2 TBA
+    - Fix issue 1237: Rename does not keep current selection in book browser.
     - Fix issue 1242: Metadata::FreeFormMetadata missing assignment line 360.
     - Fix issue 1235: Deleting one file does not give a warning dialog.
     - Fix issue 1129: Crash when importing existing image.
